# slim-llm-code

./: main.py  pyproject.toml
