[tool.poetry]
name = "slim-llm-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.1"
openai = "^1.8.0"
qrcode = "^7.4.2"
langchain-experimental = "^0.0.49"
langchain-openai = "^0.0.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
